added onion graphic to stripe checkout

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ portion of your purchase is donated to help keep us working.</p>
     <script>
 	var handler = StripeCheckout.configure({
 	    key: '',
-	    image: 'https://stripe.com/img/documentation/checkout/marketplace.png',
+	    image: './images/2014-tor-onion-shaded.png',
 	    token: function(token) {
 	      // Use the token to create the charge with a server-side script.
 	      // You can access the token ID with `token.id`
