--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@ padding:30px 30px 55px;
 portion of your purchase is donated to help keep us working.</p>
    We're happy to accept direct donations via:</p>
   <ul class="hlist">
+    <li><a href="#stripe">Stripe</a></li>
     <li><a href="#paypal">Paypal</a></li>
     <li><a href="#amazon">Amazon Payments</a></li>
     <li><a href="#dwolla">Dwolla</a></li>
@@ -217,9 +218,9 @@ portion of your purchase is donated to help keep us working.</p>
       stripeVals();
   });
 </script>
+    <a id="stripe"></a>
 <div class="hundred toptwenty stripe">
 	<div class="dbox donate">
-    <a name="stripe"></a>
 		<h3>Donate via Stripe</h3>
 
 <form action="" method="POST">
@@ -419,7 +420,13 @@ Account</small>
 	</div>
   </div>
 <!-- END PAYPAL -->
-  <div class="hundred toptwenty">
+<div class="hundred toptwenty noscript">
+    <a id="stripe"></a>
+	<div class="dbox donate" style="text-align:center;padding:10px 30px;border:1px solid #DDD;">
+	<p style="padding:0px;color:#845384;"><em>Enable javascript to donate via <strong>Stripe</strong></em></p>
+	</div>
+</div>
+<div class="hundred toptwenty">
 <!-- BEGIN AMAZON -->
     <a name="amazon"></a>
 	 <div class="dbox dsmall">
@@ -457,11 +464,6 @@ href="https://www.dwolla.com/hub/thetorproject">Continue to Dwolla
 &raquo;</a></strong></p>
     </div>
 <!-- END DWOLLA -->
-<div class="hundred toptwenty noscript">
-	<div class="dbox donate" style="text-align:center;padding:10px 30px;border:1px solid #DDD;">
-	<p style="padding:0px;color:#888;"><em>Enable javascript to donate via <strong>Stripe</strong></em></p>
-	</div>
-</div>
 <!-- BEGIN BITCOIN -->
    <a id="bitcoin"></a>
    <div class="hundred toptwenty">
