full wml-ification added redirect to thank you page

--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@ portion of your purchase is donated to help keep us working.</p>
 	    token: function(token) {
 	      // Use the token to create the charge with a server-side script.
 	      // You can access the token ID with `token.id`
+	      window.location.href = "./thankyou.html";
 	    }
 	});
 
